5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1601_1804.log
== TEST (2019-03-22 17:20:59) 
-- CODE:
xa = float(input("qual a cordenada no ponto A, xa? "))
ya = float(input("qual a cordenada no ponto A, ya? "))
xb = float(input("qual a cordenada no ponto B, xb? "))
yb = float(input("qual a cordenada no ponto B, yb? "))
from math import
x = (xb - xa)**2
y = (yb-ya)**2
dAB = sqrt(x+y)
print(round(dAB, 3))
-- ERROR:
File "XXXX", line 5
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:21:24) 
-- CODE:
from math import
xa = float(input("qual a cordenada no ponto A, xa? "))
ya = float(input("qual a cordenada no ponto A, ya? "))
xb = float(input("qual a cordenada no ponto B, xb? "))
yb = float(input("qual a cordenada no ponto B, yb? "))
x = (xb - xa)**2
y = (yb-ya)**2
dAB = sqrt(x+y)
print(round(dAB, 3))
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:21:46) 
-- CODE:
from math import *
xa = float(input("qual a cordenada no ponto A, xa? "))
ya = float(input("qual a cordenada no ponto A, ya? "))
xb = float(input("qual a cordenada no ponto B, xb? "))
yb = float(input("qual a cordenada no ponto B, yb? "))
x = (xb - xa)**2
y = (yb-ya)**2
dAB = sqrt(x+y)
print(round(dAB, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:22:02) 
-- CODE:
from math import *
xa = float(input("qual a cordenada no ponto A, xa? "))
ya = float(input("qual a cordenada no ponto A, ya? "))
xb = float(input("qual a cordenada no ponto B, xb? "))
yb = float(input("qual a cordenada no ponto B, yb? "))
x = (xb - xa)**2
y = (yb-ya)**2
dAB = sqrt(x+y)
print(round(dAB, 3))
-- EXECUTION TIME:
0.137042
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
